--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    
         #services { background-image: url('./assets/green1080.jpg'); }
         #about { background-image: url('./assets/blue1080.jpg'); }
-        /* #contact { background-image: url('./assets/blue1080.jpg'); } */
+        /* #contact1 { background-image: url('./assets/blue1080.jpg'); } */
 
 
     /* Toggle Button */
@@ -122,4 +122,5 @@ if (body.classList.contains('dark')) {
 </script>
 
 </body>
+
 </html>
