--- a/index.html
+++ b/index.html
@@ -252,6 +252,18 @@
       document.body.classList.toggle('dark');
       document.body.classList.toggle('light');
     }
+
+    function toggleMenu() {
+        navMenu.classList.toggle('show');
+    }
+
+      const hamburger = document.getElementById('hamburger');
+      const nav = document.querySelector('nav');
+        hamburger.addEventListener('click', () => {
+            nav.classList.toggle('show');
+        });
+
+
   </script>
 
 </body>
